--- a/appproject/accounts/templates/group/group_menu.html
+++ b/appproject/accounts/templates/group/group_menu.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block global_character_widget %}{% endblock %}
 {% load static %}
 
 {% block title %}グループメニュー - Codemon{% endblock %}
