--- a/appproject/accounts/templates/group/group_delete_confirm.html
+++ b/appproject/accounts/templates/group/group_delete_confirm.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block global_character_widget %}{% endblock %}
 {% load static %}
 
 {% block title %}グループ削除確認 - Codemon{% endblock %}
